@@ -21,7 +21,7 @@
 #ifndef _CALLBACKS_
 #define _CALLBACKS_
 
-enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONPREFS,BUTTONQUIT,BUTTONHIDE,NOMOREBUTONS};
+enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONPREFS,BUTTONHIDE,BUTTONQUIT,NOMOREBUTONS};
 
 extern LFSTK_windowClass	*taskContextWindow;
 
