@@ -117,6 +117,10 @@ extern LFSTK_windowClass			*dockBGWindow;
 extern LFSTK_windowClass			*iconWindow;
 extern int						holdpsize;
 
+
+
+extern LFSTK_windowClass		*mainContextWindow;
+
 extern LFSTK_windowClass			*popActionWindow;
 extern LFSTK_listGadgetClass		*popActionList;
 extern bool						inSomeWindow;
