@@ -85,7 +85,7 @@ enum {NORMAL=0,ABOVEALL,BELOWALL};
 enum bevelType {BEVELIN=0,BEVELOUT,BEVELNONE,BEVELSQUEEZEW,BEVELSQUEZEH};
 enum indicatorType {CHECK=0,RADIO,PICTURE,DISCLOSURE,NOINDICATOR};
 
-enum contextPostition {CONTEXTLEFT,CONTEXTRIGHT,CONTEXTCENTRE,CONTEXTATMOUSE,CONTEXTABOVELEFT,CONTEXTABOVECENTRE,CONTEXTABOVERIGHT};
+enum contextPostition {CONTEXTLEFT,CONTEXTRIGHT,CONTEXTCENTRE,CONTEXTATMOUSE,CONTEXTABOVELEFT,CONTEXTABOVECENTRE,CONTEXTABOVERIGHT,CONTEXTNORTH,CONTEXTNORTHEAST,CONTEXTEAST,CONTEXTSOUTHEAST,CONTEXTSOUTH,CONTEXTSOUTHWEST,CONTEXTWEST,CONTEXTNORTHWEST};
 //dropdata
 enum dropDataType {DROPINVALID=0,DROPTEXT,DROPURI};
 
