@@ -1,0 +1,13 @@
+#!/bin/bash -e
+
+if which kkeditqt &>/dev/null;then
+	INSTANCE=$((0x8000 + $(xdotool get_desktop)))
+	KKEDIT=kkeditqt
+	KKMSG=kkeditqtmsg
+
+	echo "$KKMSG -k $INSTANCE -c "openfile" -d "$1" -a"
+	$KKMSG -k $INSTANCE -c "openfile" -d "$1"
+	$KKMSG -k $INSTANCE -c "activate"
+else
+	xdg-open "$1"
+fi
