@@ -23,12 +23,12 @@ PREFIX="/usr"
 STAGING=
 LDCONFIG="/sbin/ldconfig"
 
-for arg in LFSToolKit LFSSetWallpaper LFSDesktop LFSWManager LFSPanel LFSApplications LFSDock
+for arg in LFSToolKit LFSSetWallpaper LFSDesktop LFSWM2 LFSPanel LFSApplications LFSDock
 	do
 #		tar -xvf ${arg}-*.tar.gz
 		pushd ${arg}
 			./autogen.sh --prefix=${PREFIX}||(echo "Configure Error...";exit 1)
-			make
+			make -j$(nproc)
 			if [ $arg = "LFSToolKit" ];then
 				make purge DESTDIR=${STAGING}||true
 			fi
