@@ -1,4 +1,5 @@
 0.2.1
+Added context menu to main dock window.
 Added "Iconize Dock" to launcher context window.
 
 0.2.0
